# apache-airflow-dagsyncer

./: .pre-commit-config.yaml  AIP-92-progress.md  CHANGELOG.md  CONTRIBUTION.md  PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/airflow/dagsyncer/: __init__.py  cli.py  client.py  ingest.py  listener_plugin.py  parse.py  protocol.py  server.py  syncer.py
tests/: test_client.py  test_listener_plugin.py  test_parse.py  test_protocol.py  test_server.py
