[project]
name = "apache-airflow-dagsyncer"
version = "0.0.1rc1"
description = "CLI utility to sync DAG files into an Apache Airflow dags folder"
license = { text = "Apache-2.0" }
keywords = ["airflow", "dags", "sync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
authors = [
    { name = "abhishekbhakat", email = "abhishek.bhakat@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.2",
]

[project.scripts]
apache-airflow-dagsyncer = "airflow.dagsyncer.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "airflow.dagsyncer"
namespace = true
